[gd_scene load_steps=8 format=3 uid="uid://vvxt0nv84suv"]

[ext_resource type="StyleBox" uid="uid://b4uiccqk4v6cj" path="res://scenes/UIelements/styleboxes/DialogContainerNameTab.tres" id="1_m6g2e"]
[ext_resource type="Script" uid="uid://f41x41bqjtd0" path="res://scripts/UIelements/dialog_container.gd" id="1_xgdsv"]
[ext_resource type="StyleBox" uid="uid://d3d8xmfga0r8d" path="res://scenes/UIelements/styleboxes/DialogContainerStyleBox.tres" id="3_g33gv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5bta"]

[sub_resource type="Animation" id="Animation_gx1xp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogPanel/MarginContainer/DialogText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jeqid"]
resource_name = "typewriter"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogPanel/MarginContainer/DialogText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygoxn"]
_data = {
&"RESET": SubResource("Animation_gx1xp"),
&"typewriter": SubResource("Animation_jeqid")
}

[node name="DialogContainer" type="Panel"]
offset_top = 40.0
offset_right = 1080.0
offset_bottom = 220.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_c5bta")
script = ExtResource("1_xgdsv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ygoxn")
}

[node name="CharacterNamePanel" type="Panel" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 146.0
offset_bottom = 31.0
theme_override_styles/panel = ExtResource("1_m6g2e")

[node name="CharacterName" type="Label" parent="CharacterNamePanel"]
layout_mode = 0
offset_right = 146.0
offset_bottom = 30.0
text = "Character Name"
horizontal_alignment = 1

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
theme_override_styles/panel = ExtResource("3_g33gv")

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
offset_right = 1080.0
offset_bottom = 148.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogText" type="RichTextLabel" parent="DialogPanel/MarginContainer"]
layout_mode = 2
text = "Here's some test text."
visible_characters = 0
visible_ratio = 0.0
